--- a/doc/release_notes.asciidoc
+++ b/doc/release_notes.asciidoc
@@ -30,16 +30,17 @@ endif::backend-docbook[]
 
 * Fixed net_bonding breakage caused by the upgrade to DPDK 24.03.
 ** Updated net_bonding API terminology in TRex configuration from "slave" to "member".
+* Add libarchive to the default package 
 
 == Release 3.05 ==
 
 * upgrade to DPDK 24.03
+** add mana driver 
 
 == Release 3.04 ==
 
 * Upgrade to DPDK 23.03 for new Cloud drivers 
 ** iavf works now for i40evf 
-
 
 == Release 3.03 ==
 
