--- a/doc/release_notes.asciidoc
+++ b/doc/release_notes.asciidoc
@@ -26,6 +26,12 @@ ifdef::backend-docbook[]
 
 endif::backend-docbook[]
 
+== Release 3.05 ==
+
+* Upgrade to DPDK 24.03 for new Cloud drivers 
+** add mana driver 
+
+
 == Release 3.04 ==
 
 * Upgrade to DPDK 23.03 for new Cloud drivers 
